Fix Double Init Web Service Worker

--- a/web/index.html
+++ b/web/index.html
@@ -74,10 +74,10 @@
             document.querySelector(".loading-container").style.display = "none";
             // Initialize Flutter app
             window.flutterWebRenderer = "html";
-            var script = document.createElement("script");
-            script.src = "main.dart.js";
-            script.async = true;
-            document.body.appendChild(script);
+            // var script = document.createElement("script");
+            // script.src = "main.dart.js";
+            // script.async = true;
+            // document.body.appendChild(script);
           }
         }, 500);
       });
